--- a/UI/StoryBoard/src/app/app.component.html
+++ b/UI/StoryBoard/src/app/app.component.html
@@ -1,14 +1,11 @@
 <div class="container-fluid g-0">
-  <app-header (sideNavToggled)="sideNavStatus = $event;" *ngIf="path !== 'http://localhost:4200/'"></app-header>
+  <app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
 
   <main>
-    <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}" *ngIf="path !== 'http://localhost:4200/'"></app-side-nav>
+    <app-side-nav [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}"></app-side-nav>
 
-    <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}"  *ngIf="path !== 'http://localhost:4200/'">
+    <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
       <router-outlet></router-outlet>
     </div>
   </main>
-  <div *ngIf="path === 'http://localhost:4200/'">
-    <router-outlet></router-outlet>
-  </div>
 </div>
