--- a/UI/StoryBoard/src/app/header/header.component.html
+++ b/UI/StoryBoard/src/app/header/header.component.html
@@ -4,9 +4,9 @@
         <mat-icon>menu</mat-icon>
     </div>
 
-    <a class="navbar-brand px-4">StoryBoard</a>
+    <a class="navbar-brand px-4" href="#" (click)="end()">StoryBoard</a>
 
-    <div class="navbar-collapse">
+    <!-- <div class="navbar-collapse">
         <ul class="navbar-nav me-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -20,14 +20,14 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    </div> -->
 
-    <form class="d-flex me-5">
+    <!-- <form class="d-flex me-5">
         <input class="form-control me-2" type="search" placeholder="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
-    </form>
+    </form> -->
 
-    <div class="profile-logo dropstart">
+    <!-- <div class="profile-logo dropstart">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
             user
         </a>
@@ -37,6 +37,6 @@
             <li><a class="dropdown-item" href="a">Child 2</a></li>
             <li><a class="dropdown-item" href="a">Child 3</a></li>
         </ul>
-    </div>
+    </div> -->
 
 </nav>
