--- a/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.html
+++ b/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.html
@@ -7,8 +7,8 @@
   <mat-label class="Name">Task Description</mat-label>
   <input matInput type="text" #description formControlName="description" id="description">
 
-  <mat-label class="Name">Time</mat-label>
-  <input matInput type="time" #DurationTime formControlName="#DurationTime" id="#DurationTime">
+  <mat-label class="Name">text</mat-label>
+  <input matInput type="number" #durationTime formControlName="durationTime" id="durationTime">
   
 </div>
 <div mat-dialog-actions class="buttonContainer">
