--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
@@ -14,6 +14,7 @@
                 </mat-select>
             </mat-form-field>
             <button (click)="openDialogStory()" *ngIf="sprintId !== undefined"><a>Adicionar Story</a></button>
+            <button (click)="openDialogColaborador()" *ngIf="sprintId !== undefined"><a>Adicionar Membro</a></button>
         </div>
     </div>
     <div class="content" *ngFor="let story of queryCommandStory | async">
