--- a/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.html
+++ b/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content class="container" [formGroup]="mainForm">
   
   <mat-label class="Email">Email</mat-label>
-  <input matInput #login formControlName="login" id="Email">
+  <input matInput #login formControlName="login" id="Login">
 
   <mat-label class="Name">Name</mat-label>
   <input matInput #name formControlName="name" id="Name">
