--- a/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.html
+++ b/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.html
@@ -7,13 +7,8 @@
   <mat-label class="Name">Task Description</mat-label>
   <input matInput type="text" #description formControlName="description" id="description">
 
-<<<<<<< HEAD
-  <mat-label class="Name">text</mat-label>
+  <mat-label class="Name">Duração em horas</mat-label>
   <input matInput type="number" #durationTime formControlName="durationTime" id="durationTime">
-=======
-  <mat-label class="Name">Time</mat-label>
-  <input matInput type="time" #DurationTime formControlName="#DurationTime" id="#DurationTime">
->>>>>>> 0c05245ebf5c5901dba59507c689c30b88b8619d
   
 </div>
 <div mat-dialog-actions class="buttonContainer">
