--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
@@ -14,7 +14,10 @@
       align-items: center;
       color: white;
       margin-right: 2em;
-      margin-left: 1em;
+    }
+
+    .buttonfirst {
+        margin-left: 1em;
     }
 
     .selector {
