acoplando grafico na tela

--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.html
@@ -13,11 +13,32 @@
                     <mat-option (click)="openDialogSprint()">Adicionar Sprint</mat-option>
                 </mat-select>
             </mat-form-field>
-            <button (click)="openDialogStory()" *ngIf="sprintId !== undefined" class="buttonfirst"><a>Adicionar Story</a></button>
-            <button (click)="openDialogColaborador()" *ngIf="sprintId !== undefined"><a>Adicionar Membro</a></button>
+            <!-- <button (click)="openDialogStory()" *ngIf="sprintId !== undefined" class="buttonfirst"><a>Adicionar Story</a></button>
+            <button (click)="openDialogColaborador()" *ngIf="sprintId !== undefined"><a>Adicionar Membro</a></button> -->
+
+            <button class="buttonfirst" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="openDialogStory()">
+                  <mat-icon>history</mat-icon>
+                  <span>Adicionar Story</span>
+                </button>
+                <button mat-menu-item (click)="openDialogColaborador()">
+                  <mat-icon>person</mat-icon>
+                  <span>Adicionar Colaborador</span>
+                </button>
+                <button mat-menu-item (click)="openDash()">
+                  <mat-icon>line_axis</mat-icon>
+                  <span>Dashboard</span>
+                </button>
+              </mat-menu>
         </div>
     </div>
+    
     <div class="content" *ngFor="let story of queryCommandStory | async">
         <app-story-list [Entity]="story"></app-story-list>
     </div>
+
+    <!-- <app-sprint-status-dash></app-sprint-status-dash> -->
 </nav>
