--- a/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.scss
@@ -16,13 +16,11 @@
 }
 
 .example-box {
-  padding: 20px 10px;
   border-bottom: solid 1px #ccc;
+  padding: 1rem 1rem .5rem 1rem;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
   box-sizing: border-box;
   cursor: move;
   font-size: 14px;
