--- a/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
+++ b/UI/StoryBoard/src/app/project-work-page/project-work-page.component.scss
@@ -4,16 +4,16 @@
     justify-content: end;
 
     button {
-      background-color: #404040;
       border-radius: 5px;
       border: none;
       height: 4em;
-      width: 9em;
+      width: 2rem,;
       text-align: center;
       justify-content: center;
       align-items: center;
-      color: white;
+      color: rgb(0, 0, 0);
       margin-right: 2em;
+      
     }
 
     .buttonfirst {
