--- a/UI/StoryBoard/src/app/header/header.component.scss
+++ b/UI/StoryBoard/src/app/header/header.component.scss
@@ -17,7 +17,7 @@ nav {
 }
 
 .bg-dark {
-    background-color: #171717 !important;
+    background-color: #1e1a3a !important;
 }
 
 .navbar-collapse {
