--- a/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.html
+++ b/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.html
@@ -15,5 +15,5 @@
   
 </div>
 <div mat-dialog-actions class="buttonContainer">
-  <button mat-button cdkFocusInitial class="button" (click)="submitRegister()">Submit</button>
+  <button mat-button cdkFocusInitial class="button" (click)="submitRegister()">SUBMIT</button>
 </div>
