--- a/UI/StoryBoard/src/app/app.component.scss
+++ b/UI/StoryBoard/src/app/app.component.scss
@@ -10,6 +10,7 @@ main {
     position: absolute;
     width: 100%;
     top: 4rem;
+    background-color: #2c293d;
 }
 
 app-side-nav {
@@ -17,8 +18,8 @@ app-side-nav {
     left: 0rem;
     width: 60px;
     height: calc(100vh - 4rem);
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    background-color: #171717;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);    
+    background-color: #1e1a3a;
     border-top: 1px solid white;
     border-right: 1px solid white;
     overflow-x: hidden;
@@ -43,5 +44,6 @@ app-side-nav {
 }
 
 /*Inicio Area Destinada ao scss das dialogs*/
+
 
 /*Fim Area Destinada ao scss das dialogs*/
