--- a/UI/StoryBoard/src/app/initial-page/components/add-project-dialog/add-project-dialog.scss
+++ b/UI/StoryBoard/src/app/initial-page/components/add-project-dialog/add-project-dialog.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    font-family:'Times New Roman';
 }
 
 .title{
@@ -9,6 +10,7 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 2em;
+    font-family:'Times New Roman';
 }
 
 .Name{
@@ -31,6 +33,7 @@
     margin-left: 1.2em;
     padding-top: 2em;
     padding-bottom: 3em;
+    font-family:'Times New Roman';
 }
 
 .button{
@@ -46,4 +49,5 @@
     opacity: 0.1;
     background-color: rgb(126, 126, 126);
     cursor: not-allowed;
+    
 }
