--- a/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.html
+++ b/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.html
@@ -13,7 +13,7 @@
   </div>
 
   <div mat-dialog-actions class="buttonContainer">
-    <button mat-button cdkFocusInitial class="button" [ngClass]="{ 'disabled-style': !this.mainForm.valid }" [disabled]="!this.mainForm.valid" (click)="submitLogin()">Submit</button>
+    <button mat-button cdkFocusInitial class="button" [ngClass]="{ 'disabled-style': !this.mainForm.valid }" [disabled]="!this.mainForm.valid" (click)="submitLogin()">SUBMIT</button>
   </div>
 
   <div>
