--- a/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.scss
+++ b/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    font-family: 'Times New Roman';
+
 }
 
 .title{
@@ -9,6 +11,7 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 2em;
+    font-family: 'Times New Roman';
 }
 
 .Email{
@@ -32,6 +35,7 @@
     margin-left: 1.2em;
     padding-top: 2em;
     padding-bottom: 2em;
+    font-family: 'Times New Roman';
 }
 
 .Login-singUp{
@@ -46,6 +50,7 @@
             margin-left: 5px;
             background-color: rgb(255, 255, 255);
             color:rgb(126, 126, 126);
+            font-family: 'Times New Roman';
         }
 }
 
@@ -56,6 +61,7 @@
     height: 40px;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    font-family: 'Times New Roman';
 }
 
 .ForgotPassword{
@@ -65,6 +71,7 @@
     color: rgb(0, 0, 0);
     padding-top: 2em;
     padding-bottom: 2em;
+    font-family: 'Times New Roman';
 
 }
 
@@ -72,4 +79,5 @@
     opacity: 0.1;
     background-color: rgb(126, 126, 126);
     cursor: not-allowed;
+    font-family: 'Times New Roman';
 }
