--- a/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.scss
+++ b/UI/StoryBoard/src/app/presentation-page/components/register-dialog/register-dialog.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    font-family: 'Times New Roman';
 }
 
 .tittle{
@@ -9,6 +10,7 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 2em;
+    font-family: 'Times New Roman';
 }
 
 .Login{
@@ -45,6 +47,7 @@
     margin-left: 1.2em;
     padding-top: 3em;
     padding-bottom: 2.5em;
+    font-family: 'Times New Roman';
 }
 
 .button{
@@ -54,6 +57,7 @@
     height: 40px;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    font-family: 'Times New Roman';
     
 }
 
@@ -61,4 +65,5 @@
     opacity: 0.1;
     background-color: rgb(126, 126, 126);
     cursor: not-allowed;
+    font-family: 'Times New Roman';
 }
