--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.scss
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.scss
@@ -1,7 +1,7 @@
 * {
     margin: 10px;
     padding: 10px;
-    font-family: Helvetica;
+    font-family:'Trebuchet MS';
 }
 
 .top{   
@@ -18,6 +18,7 @@
     color: black;
     margin-top: -30px;
     margin-left: -20px;
+    font-family:'Trebuchet MS';
     
 }
 
@@ -26,6 +27,7 @@
     float: right;
     margin-top: -65px;
     margin-right: -30px;
+    font-family:'Trebuchet MS';
     
     button{
         background-color: #000000;
@@ -45,12 +47,14 @@
     padding-top: 150px;
     font-weight: bold; 
     color: black;
+    font-family:'Trebuchet MS';
 }
 
 .text_sobre{
     display: table;
     width: 500px;
     text-align: justify;
+    font-family:'Trebuchet MS';
 }
 
 .subtitle{
