--- a/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.scss
+++ b/UI/StoryBoard/src/app/project-work-page/components/task-dialog/task-dialog.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    font-family:'Times New Roman';
 }
 
 .tittle{
@@ -9,6 +10,7 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 2em;
+    font-family:'Times New Roman';
 }
 
 .Name{
@@ -25,6 +27,7 @@
     margin-left: 1.2em;
     padding-top: 3em;
     padding-bottom: 2.5em;
+    font-family:'Times New Roman';
 }
 
 .button{
@@ -47,6 +50,7 @@
     
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    font-family:'Times New Roman';
     
 }
 
