--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
@@ -15,7 +15,9 @@
     
         <div>
             <h2 class = "sobre">Sobre nós</h2>
-            <p class="text_sobre">Este projeto de Trabalho de Conclusão de Curso (TCC) tem como objetivo desenvolver um sistema de gerenciamento de tarefas baseado no método Kanban. O Kanban é um sistema visual que auxilia no planejamento, acompanhamento e controle das atividades em um fluxo de trabalho.
+            <p class="text_sobre">Nosso Trabalho de Conclusão de Curso (TCC) tem como foco o desenvolvimento de um sistema de gerenciamento de tarefas fundamentado no método Kanban. O objetivo principal é criar uma plataforma que emprega o método Kanban, um sistema visual altamente eficiente, para aprimorar o planejamento, acompanhamento e controle das atividades em fluxos de trabalho.
+                O Kanban, originado no Japão, é uma metodologia reconhecida por sua abordagem visual e pragmática para organizar tarefas. Por meio de colunas e cartões, permite a fácil identificação do progresso das atividades, promovendo uma visão clara do fluxo de trabalho.
+                Este projeto busca explorar e implementar os princípios do Kanban para oferecer uma solução flexível e eficaz. Pretendemos criar uma ferramenta que possibilite aos usuários uma gestão simplificada e transparente de suas tarefas, aumentando a produtividade e melhorando a eficiência dos processos de trabalho.
             </p>
         </div>
     
@@ -26,8 +28,9 @@
         <div class = "container_right">
             <img class="img" src="../../assets/img/wyll.png">
             <div>
-                <p class="text">Wyllyan Thibes, atualmente em fazenda rio grande e com 21 anos estuda "Sistemas de Informação (BSIS)" e formado em "Gestão da tecnologia da informação (TGTI)" ambas em UniSantaCruz - Curitiba.
-                    Sempre em busca de trazer os conhecimentos aprendidos em todo o período de graduação para aplicação em nossa página.
+                <p class="text">Olá, sou o Wyllyan Thibes, um entusiasta apaixonado pela integração entre tecnologia e conhecimento. Atualmente, moro em Fazenda Rio Grande e estou no auge dos meus 22 anos. Sou um eterno aprendiz no mundo da tecnologia, atualmente mergulhado no curso de "Sistemas de Informação (BSIS)" na UniSantaCruz em Curitiba.
+                    Minha jornada acadêmica já me presenteou com a graduação em "Gestão da Tecnologia da Informação (TGTI)", também pela UniSantaCruz. Ao longo desses anos, adquiri uma bagagem valiosa de conhecimentos que busco aplicar em cada em cada projeto que abraço.
+                    O fascínio pela astronomia é uma das minhas paixões mais profundas, observar o cosmos, entender suas maravilhas e mistérios, é algo que me conecta ao desconhecido de uma maneira única, esse é meu maior fascínio!
                 </p>
             </div>
         </div>
