--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
@@ -1,56 +1,80 @@
-<nav>
-    <div class="content">
-        <div class="Top">
-            <div>
-                <h1 class="title">StoryBoard</h1>
-            </div>
-            <div>
-                <div class = "Btns_in_up">
-                    <button (click)="openDialogLogin()"><a>Sing In</a></button>
-                    <button (click)="openDialogRegister()"><a>Sing Up</a></button>
-                </div>
-            </div>
-        </div>
-    
-    
+<div class="content">
+    <div class="top">
+        <p class="title">StoryBoard</p>
         <div>
-            <h2 class = "sobre">Sobre nós</h2>
-            <p class="text_sobre">Nosso Trabalho de Conclusão de Curso (TCC) tem como foco o desenvolvimento de um sistema de gerenciamento de tarefas fundamentado no método Kanban. O objetivo principal é criar uma plataforma que emprega o método Kanban, um sistema visual altamente eficiente, para aprimorar o planejamento, acompanhamento e controle das atividades em fluxos de trabalho.
-                O Kanban, originado no Japão, é uma metodologia reconhecida por sua abordagem visual e pragmática para organizar tarefas. Por meio de colunas e cartões, permite a fácil identificação do progresso das atividades, promovendo uma visão clara do fluxo de trabalho.
-                Este projeto busca explorar e implementar os princípios do Kanban para oferecer uma solução flexível e eficaz. Pretendemos criar uma ferramenta que possibilite aos usuários uma gestão simplificada e transparente de suas tarefas, aumentando a produtividade e melhorando a eficiência dos processos de trabalho.
-            </p>
-        </div>
-    
-        <div>
-            <h3 class="subtitle_right">Wyllyan T.Meira</h3>
-        </div>
-    
-        <div class = "container_right">
-            <img class="img" src="../../assets/img/wyll.png">
-            <div>
-                <p class="text">Olá, sou o Wyllyan Thibes, um entusiasta apaixonado pela integração entre tecnologia e conhecimento. Atualmente, moro em Fazenda Rio Grande e estou no auge dos meus 22 anos. Sou um eterno aprendiz no mundo da tecnologia, atualmente mergulhado no curso de "Sistemas de Informação (BSIS)" na UniSantaCruz em Curitiba.
-                    Minha jornada acadêmica já me presenteou com a graduação em "Gestão da Tecnologia da Informação (TGTI)", também pela UniSantaCruz. Ao longo desses anos, adquiri uma bagagem valiosa de conhecimentos que busco aplicar em cada em cada projeto que abraço.
-                    O fascínio pela astronomia é uma das minhas paixões mais profundas, observar o cosmos, entender suas maravilhas e mistérios, é algo que me conecta ao desconhecido de uma maneira única, esse é meu maior fascínio!
-                </p>
-            </div>
-        </div>
-    
-        <div>
-            <h3 class="subtitle">Alexandre W.Nikitin</h3>  
-        </div>
-    
-        <div class = "container">
-            <div>
-                <img class="img" src="../../assets/img/Ale.jpeg">
-            </div>
-        
-            <div>
-                <p class="text">Alexandre Nikitin, tenho o prazer de compartilhar um pouco sobre mim com você. Aos 21 anos de idade, estou atualmente cursando Sistemas da Informação e trabalho como desenvolvedor full stack na renomada empresa Bosch.<br>
-                    Apaixonado por carros e computação desde cedo, encontrei na área de desenvolvimento uma maneira de unir essas duas paixões. Como desenvolvedor full stack, tenho a oportunidade de trabalhar em projetos que envolvem tanto o desenvolvimento de aplicativos e sistemas de backend quanto a criação de interfaces de usuário.<br>
-                    Embora eu possua habilidades e experiência em ambos os aspectos do desenvolvimento, devo confessar que tenho uma preferência especial pela parte de backend. A lógica por trás dos sistemas e a resolução de problemas complexos sempre me fascinaram. No entanto, mesmo com minha dedicação ao trabalho full stack, devo admitir que tenho um sentimento de aversão em relação ao front end. No entanto, reconheço sua importância e busco sempre aprimorar minhas habilidades nessa área para me tornar um desenvolvedor mais completo.
-                </p>
+            <div class="Btns_in_up">
+                <button (click)="openDialogLogin()"><a>Sing In</a></button>
+                <button (click)="openDialogRegister()"><a>Sing Up</a></button>
             </div>
         </div>
     </div>
-    
-</nav>
+
+
+    <div>
+        <h2 class="sobre">Sobre nós</h2>
+        <p class="text_sobre">Nosso Trabalho de Conclusão de Curso (TCC) tem como foco o desenvolvimento de um sistema
+            de gerenciamento de tarefas fundamentado no método Kanban. O objetivo principal é criar uma plataforma que
+            emprega o método Kanban, um sistema visual altamente eficiente, para aprimorar o planejamento,
+            acompanhamento e controle das atividades em fluxos de trabalho.
+            O Kanban, originado no Japão, é uma metodologia reconhecida por sua abordagem visual e pragmática para
+            organizar tarefas. Por meio de colunas e cartões, permite a fácil identificação do progresso das atividades,
+            promovendo uma visão clara do fluxo de trabalho.
+            Este projeto busca explorar e implementar os princípios do Kanban para oferecer uma solução flexível e
+            eficaz. Pretendemos criar uma ferramenta que possibilite aos usuários uma gestão simplificada e transparente
+            de suas tarefas, aumentando a produtividade e melhorando a eficiência dos processos de trabalho.
+        </p>
+    </div>
+
+    <div class="infos">
+        <div class="infos-container">
+            <div>
+                <h3 class="subtitle_right">Wyllyan T.Meira</h3>
+            </div>
+
+            <div class="container">
+                <img class="img" src="../../assets/img/wyll.png">
+
+                <p class="text">Olá, sou o Wyllyan Thibes, um entusiasta apaixonado pela integração entre tecnologia e
+                    conhecimento. Atualmente, moro em Fazenda Rio Grande e estou no auge dos meus 22 anos. Sou um eterno
+                    aprendiz no mundo da tecnologia, atualmente mergulhado no curso de "Sistemas de Informação (BSIS)"
+                    na UniSantaCruz em Curitiba.
+                    Minha jornada acadêmica já me presenteou com a graduação em "Gestão da Tecnologia da Informação
+                    (TGTI)", também pela UniSantaCruz. Ao longo desses anos, adquiri uma bagagem valiosa de
+                    conhecimentos que busco aplicar em cada em cada projeto que abraço.
+                    O fascínio pela astronomia é uma das minhas paixões mais profundas, observar o cosmos, entender suas
+                    maravilhas e mistérios, é algo que me conecta ao desconhecido de uma maneira única, esse é meu maior
+                    fascínio!
+                </p>
+            </div>
+        </div>
+
+        <div class="infos-container">
+            <div>
+                <h3 class="subtitle">Alexandre W.Nikitin</h3>
+            </div>
+
+            <div class="container">
+                <img class="img" src="../../assets/img/Ale.jpeg">
+
+                <p class="text">Alexandre Nikitin, tenho o prazer de compartilhar um pouco sobre mim com você. Aos 21
+                    anos de idade, estou atualmente cursando Sistemas da Informação e trabalho como desenvolvedor full
+                    stack na renomada empresa Bosch.<br>
+                    Apaixonado por carros e computação desde cedo, encontrei na área de desenvolvimento uma maneira de
+                    unir essas duas paixões. Como desenvolvedor full stack, tenho a oportunidade de trabalhar em
+                    projetos que envolvem tanto o desenvolvimento de aplicativos e sistemas de backend quanto a criação
+                    de interfaces de usuário.<br>
+                    Embora eu possua habilidades e experiência em ambos os aspectos do desenvolvimento, devo confessar
+                    que tenho uma preferência especial pela parte de backend. A lógica por trás dos sistemas e a
+                    resolução de problemas complexos sempre me fascinaram. No entanto, mesmo com minha dedicação ao
+                    trabalho full stack, devo admitir que tenho um sentimento de aversão em relação ao front end. No
+                    entanto, reconheço sua importância e busco sempre aprimorar minhas habilidades nessa área para me
+                    tornar um desenvolvedor mais completo.
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
