--- a/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.scss
+++ b/UI/StoryBoard/src/app/presentation-page/components/login-dialog/login-dialog.scss
@@ -1,7 +1,8 @@
 .container{
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 70vw;
+    max-width: 500px;
     font-family: 'Times New Roman';
 
 }
